# finm-327

hw1/: matrix_sum  matrix_sum.cpp  matrix_sum_O2
hw2/: Makefile  README.md  benchmark.cpp  linalg.cpp  linalg.h  test.cpp
hw3/: hft_engine.cpp  writeup.txt
hw4/: README.md
hw4/include/: OrderBookBuffer.hpp  StaticVector.hpp  constexpr_math.hpp  generic_algorithms.hpp  metaprogramming.hpp
hw4/src/: main.cpp
hw5/: Makefile  part1_hashtable.cpp  part2_priority_queue.cpp
phase2/: hft_client.cpp  hft_server.cpp  strategy.md
phase3/: .gitignore  Makefile  README.md  feed_parser.h  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  sample_feed.txt
phase4/: BENCHMARKS.md  CMakeLists.txt  README.md  bench_results.txt
phase4/include/: MarketData.hpp  MatchingEngine.hpp  MemoryPool.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
phase4/src/: MarketData.cpp  main.cpp
phase4/test/: test_latency.cpp
phase5/: .gitignore  Makefile  PERFORMANCE.md  README.md  bench_results.csv  plot_results.py
phase5/include/: MemoryPool.hpp  OptimizedOrderBook.hpp  Order.hpp  OrderBook.hpp  Timer.hpp
phase5/src/: benchmark.cpp  main.cpp
phase5/test/: test_orderbook.cpp
session3/: Makefile  part1_warmup.cpp  part2_fixed.cpp  part3_trade_handle.cpp  part4_shared_handle.cpp  reflection.md
session4/: bench_results.txt  part3_timeseries_simd.cpp  part4_orderbook.cpp  report.md
